syntax = "proto3";

  option go_package = "pkg/api/";

package auth;

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int64 id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}